# Career-Atlas

./: .gitignore  BRANCH_PROTECTION_SETUP.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_HANDOFF.md  LICENSE  README.md  SECURITY.md  changes_made.md  replace_fetch.py  skills-lock.json  test_supabase.py
.agents/rules/: each-file-should-be-max-300-words.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
.jules/: bolt.md
Documentation/: learning_pathways_migration.sql
Notebooks/: 01_resume_extraction.ipynb  02_gap_analysis_rag.ipynb  03_deep_researcher.ipynb  04_job_hunter.ipynb  05_github_repo_analysis.ipynb  4_resume_plus_job_agent.ipynb
backend/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  check_N1.py  docker-compose.yml  pyproject.toml  replace.py  replace2.py  requirements.txt  test_refactor.py
backend/app/: config.py  main.py
backend/app/deep_researcher/: agent.py  judge.py  prompts.py  router.py  schemas.py  tools.py  validation.py
backend/app/dependencies/: auth.py  database.py  pinecone.py
backend/app/gap_analysis/: __init__.py  ai_services.py  hybrid_retrieval.py  router.py  schemas.py  service.py  taxonomy.json  taxonomy_gen.py
backend/app/github_analysis/: github_api.py  router.py  schemas.py  service.py
backend/app/job_hunter/: agent.py  router.py  schemas.py  tools.py
backend/app/resume_extraction/: router.py  schemas.py  service.py
backend/app/roadmap_generation/: router.py  schemas.py  service.py
backend/app/target_roles/: router.py
backend/app/utils/: llm_factory.py  resumes.py  storage.py  tavily.py
backend/scripts/: ingest_taxonomy.py  smoke_deep_researcher.py  smoke_deep_researcher_last.json
backend/sql/: 001_schema.sql  002_rls.sql  003_seed_roles.sql  004_job_matches_structured.sql  005_deep_research_support.sql  006_github_analysis.sql  007_github_hardening.sql
backend/tests/: test_config.py  test_deep_researcher_judge.py  test_deep_researcher_validation.py  test_gap_analysis_hybrid_retrieval.py  test_github_analysis_service.py  test_job_hunter_agent.py  test_llm_factory.py  test_resume_extraction_service.py
backend/testsprite_tests/: standard_prd.json
backend/testsprite_tests/tmp/: code_summary.yaml
frontend/: .env.example  .env.production  README.md  package-lock.json  package.json  pnpm-lock.yaml  wrangler.jsonc
frontend/.lovable/: plan.md
frontend/src/: routeTree.gen.ts  server.ts  start.ts  styles.css
frontend/testsprite_tests/: TC001_Resume_upload_with_target_role_begins_processing.py  TC002_Sign_in_and_reach_onboarding_resume_upload.py  TC003_Resume_processing_completes_and_dashboard_shows_structured_profile.py  TC004_Generate_roadmap_from_completed_analysis_and_view_results.py  TC005_Start_job_search_from_completed_profile_and_view_ranked_listings.py  TC006_Roadmap_generation_is_dependency_aware_and_ordered.py  TC007_Job_search_supports_changing_target_role_and_rerunning.py  TC008_Dashboard_route_guard_redirects_unauthenticated_users_to_login.py  TC009_Roadmap_generation_prevents_duplicate_concurrent_runs.py  TC010_Roadmap_remains_visible_after_navigating_within_dashboard.py  TC011_Job_search_prevents_duplicate_concurrent_runs.py  TC012_Job_result_links_are_usable_from_the_dashboard.py  TC013_Roadmap_section_handles_empty_state_before_generation.py  TC014_Invalid_credentials_prevent_sign_in.py  TC015_Job_listings_empty_state_is_handled.py  standard_prd.json  (+3 more)
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
(+37 files in other folders)
