[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",

    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",

    "httpx==0.27.2",

    "supabase==2.10.0",
    "gunicorn==23.0.0",

    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",

    "PyMuPDF==1.24.10",
    "pymupdf4llm==0.0.17",

    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-google-genai==1.0.10",
    "langchain-groq==0.1.9",
    "langchain-huggingface==0.0.3",

    "langgraph==0.2.16",

    "tavily-python==0.5.0",

    "pinecone==5.3.1",

    "rank-bm25==0.2.2",

    "python-dotenv==1.0.1",

    "websockets==13.1"
]
[tool.setuptools.packages.find]
include = ["app*"]
