[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.23.0",
    "pymupdf4llm>=0.0.17",
    "phonenumbers>=9.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-google-genai>=0.0.5",
    "langchain-groq>=0.0.1",
    "langchain-huggingface>=0.0.1",
    "langgraph>=0.0.10",
    "tavily-python>=0.3.0",
    "pinecone>=6.0.0",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0.0",
    "websockets>=11,<16",
    "supabase>=2.24.0",
    "langchain-tavily>=0.2.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.13.3",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "sentry-sdk>=2.60.0",
]
