[project]
name = "careeratlas-backend"
version = "0.1.0"
description = "CareerAtlas Backend - AI-powered career planning API with multi-agent architecture"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Dripto Bhattacharyya", email = "dripto.215@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.51.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.23.0",
    "pymupdf4llm>=0.0.17",
    "phonenumbers>=9.0.34",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-google-genai>=0.0.5",
    "langchain-groq>=0.0.1",
    "langchain-huggingface>=0.0.1",
    "langgraph>=1.2.9",
    "tavily-python>=0.3.0",
    "pinecone>=6.0.0",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0.0",
    "websockets>=11,<16",
    "supabase>=2.24.0",
    "langchain-tavily>=0.2.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.13.4",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "sentry-sdk>=2.60.0",
    "nest-asyncio>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
show_missing = true
